fix: Resolve multi-step.component.html build errors

--- a/projects/demo/src/app/multi-step/multi-step.component.html
+++ b/projects/demo/src/app/multi-step/multi-step.component.html
@@ -1,10 +1,10 @@
 <div>
   <h2>Multi-step Shortcut Demo</h2>
-  <p id="shortcut-desc">{{ shortcutUi.description }}</p>
+  <p id="shortcut-desc">{{ shortcutUi().description }}</p>
 
   <div>
-    <p><strong>Shortcut (PC):</strong> {{ shortcutUi.keys }}</p>
-    <p><strong>Shortcut (Mac):</strong> {{ shortcutUi.macKeys }}</p>
+    <p><strong>Shortcut (PC):</strong> {{ shortcutUi().keys }}</p>
+    <p><strong>Shortcut (Mac):</strong> {{ shortcutUi().macKeys }}</p>
   </div>
 
   <div>
