feat: Implement keyboard shortcuts directive

--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -6,6 +6,7 @@
     <a routerLink="/feature" routerLinkActive="active">Feature</a>
     <a routerLink="/customize" routerLinkActive="active">Customize</a>
     <a routerLink="/multi-step" routerLinkActive="active">Multi-step</a>
+    <a routerLink="/directive" routerLinkActive="active">Directive</a>
   </nav>
 
   <main>
